background attachment fix on ios

--- a/css/custom.css
+++ b/css/custom.css
@@ -146,7 +146,11 @@ section {
 	height:50%;
 }
 
-
+@media (max-width:450px) {
+	.background {
+		background-attachment:scroll;
+	}
+}
 
 /* MODAL
 	****************************************************************************************
